made a rough fix for history overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -271,9 +271,10 @@ html *{
   font-family: 'Press Start 2P', cursive;
   font-size: 25px;
   table-layout: fixed;
-  overflow: hidden;
+  overflow: visible;
   margin: 0px;
   width: 100%;
+  height: 100%;
 }
 
 .hidden{
